# edge_lib

./: Cargo.toml
edge_trait/: Cargo.toml
edge_trait/src/: data.rs  lib.rs
examples/: data_manager.rs
sqlite-dm/: Cargo.toml  test.db
sqlite-dm/src/: lib.rs
sqlite-dm/src/dao/: mod.rs
src/: computed.rs  data.rs  engine.rs  err.rs  func.rs  inc.rs  lib.rs  mem_table.rs  util.rs
src/data/: cache.rs  mem.rs  rec.rs  temp.rs
src/data/temp/func/: mod.rs
src/data/united/: mod.rs
src/engine/: inc.rs
src/engine/temp/: mod.rs
src/util/: data.rs  engine.rs  func.rs  mem_table.rs
src/util/data/: mem.rs  temp.rs
src/util/func/: mod.rs
tests/: test.rs
