[package]
name = "edge_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
log = "0.4.21"
async-recursion = "1.1.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.35.0", features = ["full"] }
