[workspace]
members = [".", "sqlite-dm"]

[package]
name = "edge_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"
log = "0.4"
async-recursion = "1.1"
rand = "0.8"
uuid = { version = "1.8", features = ["v4"] }
tokio = { version = "1.35", features = ["sync", "time"] }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.35", features = ["full"] }

[features]
js = ["uuid/js"]
