[package]
name = "edge_trait"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
log = "0.4.21"
async-recursion = "1.1.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1.35.0", features = ["sync"] }

[dev-dependencies]
env_logger = "0.11.3"
tokio = { version = "1.35.0", features = ["full"] }

[features]
js = [ "uuid/js" ]
