[package]
name = "sqlite-dm"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

moon_err = { git = "https://github.com/GhostMinerPlus/moon_err.git" }

edge_lib = { path = ".." }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
